[package]
name = "line_of_sight"
version = "0.1.3"
edition = "2021"
description = "A crate for finding the line of sight on a 2D grid."
license = "MIT OR Apache-2.0"
authors = ["Kamil Dydo <dydokamil@icloud.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
