[package]
name = "line_of_sight"
version = "0.1.4"
edition = "2021"
description = "A crate for finding the line of sight on a 2D grid."
license = "MIT OR Apache-2.0"
authors = ["Kamil Dydo <dydokamil@icloud.com>"]
repository = "https://github.com/dydokamil/rust_line_of_sight"
homepage="https://crates.io/crates/line_of_sight"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
